--- a/#src/scss/design/media.scss
+++ b/#src/scss/design/media.scss
@@ -206,6 +206,9 @@
     .d-footer .container {
         padding: 0;
     }
+    .d-header__menu-item {
+        color: #000;
+    }
 }
 @media (max-width: 1000px) {
     .d-new__content {
