--- a/#src/scss/index/header.scss
+++ b/#src/scss/index/header.scss
@@ -119,6 +119,16 @@
         &-btn {
             &-container {
                 margin-top: 75px;
+                position: relative;
+                &::before {
+                    content: "";
+                    position: absolute;
+                    width: 97px;
+                    height: 47px;
+                    border: 1px solid #dc4139;
+                    top: 15px;
+                    left: -23px;
+                }
             }
         }
     }
