--- a/#src/scss/new/media.scss
+++ b/#src/scss/new/media.scss
@@ -114,6 +114,9 @@
     .n-header__new {
         padding: 0 70px;
     }
+    .n-header__menu-item {
+        color: #000;
+    }
 }
 @media (max-width: 1000px) {
     .n-header__nav {
