--- a/#src/scss/case/promotion.scss
+++ b/#src/scss/case/promotion.scss
@@ -4,6 +4,17 @@
     align-items: center;
     z-index: 1;
     position: relative;
+    &__media {
+        display: none;
+        &-container {
+            width: 100%;
+            padding: 81px 0px 36px 0px;
+            margin: 0 auto;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
+    }
     &__block {
         height: 275px;
         width: 401px;
