--- a/#src/scss/contact/map.scss
+++ b/#src/scss/contact/map.scss
@@ -3,6 +3,15 @@
     width: 100%;
     padding: 180px 0px 130px 0px;
     z-index: 1;
+    &::after {
+        content: "";
+        position: absolute;
+        width: 1px;
+        height: 1026px;
+        background: #949494;
+        bottom: -195px;
+        right: 40%;
+    }
     &__block {
         width: 100%;
         &-title {
