--- a/#src/scss/index/skills.scss
+++ b/#src/scss/index/skills.scss
@@ -177,6 +177,16 @@
         }
         &-btn {
             padding: 84px 0px 90px 0px;
+            position: relative;
+            &::before {
+                content: "";
+                position: absolute;
+                width: 97px;
+                height: 47px;
+                border: 1px solid #fff;
+                top: 100px;
+                left: 187px;
+            }
         }
     }
 }
@@ -207,6 +217,18 @@
     width: 100%;
     height: 1000px;
     padding: 0px 180px;
+    & a {
+        position: relative;
+        &::before {
+            content: "";
+            position: absolute;
+            width: 97px;
+            height: 47px;
+            border: 1px solid #ffffff;
+            top: 1px;
+            left: -23px;
+        }
+    }
 }
 .skill__tab-form.skill__active,
 #tab-1:checked ~ #form-1,
@@ -474,7 +496,12 @@ button.skills__info-btn {
     top: 33px;
 }
 .swiper-control .swiper-button-next::after {
-    content: url(../../img/right.svg);
+    content: "🠖";
+    font-size: 60px;
+    display: inline-block;
+    position: relative;
+    top: -10px;
+    color: #fff;
 }
 .swiper-control .swiper-button-prev {
     position: absolute;
@@ -482,15 +509,12 @@ button.skills__info-btn {
     top: 33px;
 }
 .swiper-control .swiper-button-prev::after {
-    content: url(../../img/left.svg);
-}
-.swiper-control .swiper-button-next {
-    background: url('../../img/right.png') no-repeat;
-    width: 35px;
-}
-.swiper-control .swiper-button-prev {
-    background: url('../../img/left.png') no-repeat;
-    width: 35px;
+    content: "🠔";
+    font-size: 60px;
+    display: inline-block;
+    position: relative;
+    top: -10px;
+    color: #fff;
 }
 .swiper__block {
     display: flex;
