--- a/#src/scss/seo/header.scss
+++ b/#src/scss/seo/header.scss
@@ -310,6 +310,7 @@ button.s-header__info-btn {
 .swiper-container {
     width: 100%;
     height: 100%;
+    overflow: hidden;
 }
 
 .mySwiper .swiper-slide {
