--- a/#src/scss/seo/audit.scss
+++ b/#src/scss/seo/audit.scss
@@ -152,7 +152,8 @@
         justify-content: center;
         margin-top: 146px;
         &-text {
-            width: 668px;
+            width: 100%;
+            text-align: center;
             height: 55px;
             font-family: Circe;
             font-style: normal;
