--- a/#src/scss/detail/header.scss
+++ b/#src/scss/detail/header.scss
@@ -51,7 +51,7 @@
                 right: -42px;
                 width: 25px;
                 height: 0px;
-                border: 1px solid #DC4139;
+                border-top: 1px solid #DC4139;
             }
             &::before {
                 content: "";
@@ -60,7 +60,7 @@
                 right: -58px;
                 width: 25px;
                 height: 0px;
-                border: 1px solid #DC4139;
+                border-top: 1px solid #DC4139;
             }
         }
     }
@@ -88,7 +88,7 @@
             color: #7D7D7D;
         }
         &-title {
-            margin-top: 48px;
+            margin-top: 62px;
             width: 1080px;
             height: 88px;
             font-family: Circe;
