--- a/#src/scss/seo/header.scss
+++ b/#src/scss/seo/header.scss
@@ -54,7 +54,7 @@
                 right: -42px;
                 width: 25px;
                 height: 0px;
-                border: 1px solid #DC4139;
+                border-top: 1px solid #DC4139;
             }
             &::before {
                 content: "";
@@ -63,7 +63,7 @@
                 right: -58px;
                 width: 25px;
                 height: 0px;
-                border: 1px solid #DC4139;
+                border-top: 1px solid #DC4139;
             }
         }
     }
@@ -82,7 +82,7 @@
     &__info {
         &-add {
             margin-top: 11px;
-            width: 96px;
+            width: 100%;
             height: 19px;
             font-family: Circe;
             font-style: normal;
@@ -294,7 +294,7 @@ button.s-header__info-btn {
 		transition: .15s .25s ease left, .5s .05s ease color;
 	}
 	&.btn-right-after:before {
-		content: 'Найти точки роста';
+		content: 'Start проекта';
 		position: absolute;
 		left: -230px;
 		top: 14px;
