--- a/#src/scss/detail/media.scss
+++ b/#src/scss/detail/media.scss
@@ -121,7 +121,6 @@
     }
     .dt-header__info-title {
         width: 990px;
-        height: 27%;
     }
     .dt-header__info-blocks {
         width: 990px;
@@ -268,11 +267,11 @@
     }
     .dt-header__menu-item::after {
         background-color: #fff;
-        border: 1px solid #fff;
+        border-top: 1px solid #fff;
     }
     .dt-header__menu-item::before {
         background-color: #fff;
-        border: 1px solid #fff;
+        border-top: 1px solid #fff;
     }
     .dt-header__logo {
         & rect {
@@ -339,6 +338,20 @@
         transform: translate(0%, 0%);
         margin: 0;
         padding: 0 180px;
+    }
+    .dt-header__container {
+        width: 100%;
+        height: 100%;
+        position: static;
+        transform: translate(0%,0%);
+        display: block;
+        flex-direction: row;
+        justify-content: space-between;
+        margin: 0;
+        margin-top: 50px;
+    }
+    .dt-header {
+        height: 100%;
     }
 }
 @media (max-width: 1000px) {
@@ -413,6 +426,9 @@
     .dt-header__container {
         width: 100%;
     }
+    .dt-header__info-title {
+        font-size: 36px;
+    }
 }
 @media (max-width: 550px) {
     .dt-header__container {
@@ -484,14 +500,14 @@
 
 
 
-@media (max-height: 900px) {
-    .dt-header__info-blocks {
-        margin-top: 200px;
-    }
-    .dt-header__info-add {
-        margin-top: 30px;
-    }
-}
+// @media (max-height: 900px) {
+//     .dt-header__info-blocks {
+//         margin-top: 200px;
+//     }
+//     .dt-header__info-add {
+//         margin-top: 30px;
+//     }
+// }
 
 @media (max-height: 850px) {
     .dt-header__info-title {
@@ -505,9 +521,9 @@
     }
 }
 @media (max-height: 800px) {
-    .dt-header__info-text {
-        margin-top: 70px;
-    }
+    // .dt-header__info-text {
+    //     margin-top: 70px;
+    // }
     .dt-header__info-add {
         margin-top: 60px;
     }
@@ -527,6 +543,23 @@
 }
 @media (max-height: 650px) {
     .dt-header__info-blocks {
-        margin-top: 90px;
+        margin-top: 80px;
     }
 }
+@media (max-height: 600px) {
+    .dt-header__info-blocks {
+        margin-top: 50px;
+    }
+}
+@media (max-height: 550px) {
+    .dt-header__info-blocks {
+        margin-top: 20px;
+    }
+}
+
+
+// @media (max-width: 1045px) and (max-height: 900px) {
+//     .dt-header__info-blocks {
+//         margin-top: 70px;
+//     }
+// }
