--- a/#src/scss/case/header.scss
+++ b/#src/scss/case/header.scss
@@ -51,7 +51,7 @@
                 right: -42px;
                 width: 25px;
                 height: 0px;
-                border: 1px solid #DC4139;
+                border-top: 1px solid #DC4139;
             }
             &::before {
                 content: "";
@@ -60,7 +60,7 @@
                 right: -58px;
                 width: 25px;
                 height: 0px;
-                border: 1px solid #DC4139;
+                border-top: 1px solid #DC4139;
             }
         }
     }
