--- a/#src/scss/contact/header.scss
+++ b/#src/scss/contact/header.scss
@@ -154,7 +154,7 @@
                 right: -42px;
                 width: 25px;
                 height: 0px;
-                border: 1px solid #DC4139;
+                border-top: 1px solid #DC4139;
             }
             &::before {
                 content: "";
@@ -163,7 +163,7 @@
                 right: -58px;
                 width: 25px;
                 height: 0px;
-                border: 1px solid #DC4139;
+                border-top: 1px solid #DC4139;
             }
         }
     }
