--- a/#src/scss/contact/media.scss
+++ b/#src/scss/contact/media.scss
@@ -142,10 +142,10 @@
         display: none;
     }
     .k-header__menu-item::after {
-        border: 1px solid #fff;
+        border-top: 1px solid #fff;
     }
     .k-header__menu-item::before {
-        border: 1px solid #fff;
+        border-top: 1px solid #fff;
     }
     .k-map__block-title {
         padding: 0 140px;
