--- a/#src/scss/index/header.scss
+++ b/#src/scss/index/header.scss
@@ -54,7 +54,7 @@
                 right: -42px;
                 width: 25px;
                 height: 0px;
-                border: 1px solid #DC4139;
+                border-top: 1px solid #DC4139;
             }
             &::before {
                 content: "";
@@ -63,7 +63,7 @@
                 right: -58px;
                 width: 25px;
                 height: 0px;
-                border: 1px solid #DC4139;
+                border-top: 1px solid #DC4139;
             }
         }
     }
