--- a/#src/scss/index/media.scss
+++ b/#src/scss/index/media.scss
@@ -784,10 +784,10 @@
     }
     .header__menu-item {
         &::after {
-            border: 1px solid #fff;
+            border-top: 1px solid #fff;
         }
         &::before {
-            border: 1px solid #fff;
+            border-top: 1px solid #fff;
         }
     }
     .header__image-item {
