--- a/#src/scss/new/media.scss
+++ b/#src/scss/new/media.scss
@@ -100,10 +100,10 @@
     }
     .n-header__menu-item {
         &::after {
-            border: 1px solid #fff;
+            border-top: 1px solid #fff;
         }
         &::before {
-            border: 1px solid #fff;
+            border-top: 1px solid #fff;
         }
     }
     .n-header__container {
